--- a/JwtAuthAspNet/appsettings.json
+++ b/JwtAuthAspNet/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "local": "Server=ROLAND-DEV-BOOT\\SQLEXPRESS2019;Database=JwtAuthAspNetDB;Trusted_connection=true;TrustServerCertificate=true"
+  },
+  "JWT": {
+    "ValidIssuer": "https://localhost:7291",
+    "ValidAudience": "http://localhost:5004",
+    "Secret": "QSLDLHDLQDQDPN@99dwwwxcvWWXVGTAxxf254qdadjapdiadhoefgu=*-d*ieopodvibjkdn@lqcndsbjgrjfeirgfkjdnlqslkei256ef54rf"
+  }
 }
